[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gdscript-course-builder/ui/SlugDialog.gd" type="Script" id=1]

[node name="SlugDialog" type="WindowDialog"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 400, 160 )
window_title = "Edit Slug"
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1916.0
margin_bottom = 1076.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/Layout"]
margin_right = 1912.0
margin_bottom = 14.0
text = "Slug part of the lesson folder:"

[node name="SlugText" type="HBoxContainer" parent="Margin/Layout"]
margin_top = 18.0
margin_right = 1912.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="Margin/Layout/SlugText"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "lesson-"

[node name="LineEdit" type="LineEdit" parent="Margin/Layout/SlugText"]
margin_left = 51.0
margin_right = 1912.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Margin/Layout"]
margin_top = 46.0
margin_right = 1912.0
margin_bottom = 1048.0
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Margin/Layout"]
margin_top = 1052.0
margin_right = 1912.0
margin_bottom = 1072.0
alignment = 1

[node name="ConfirmButton" type="Button" parent="Margin/Layout/Buttons"]
margin_left = 901.0
margin_right = 932.0
margin_bottom = 20.0
text = "OK"

[node name="Padding" type="Control" parent="Margin/Layout/Buttons"]
margin_left = 936.0
margin_right = 952.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 0 )

[node name="CancelButton" type="Button" parent="Margin/Layout/Buttons"]
margin_left = 956.0
margin_right = 1010.0
margin_bottom = 20.0
text = "Cancel"
